Style: add corrected size images and updated spacing for header

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,11 +1,38 @@
 .header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  height: 100px;
-  border: 2px solid rgb(0, 30, 255);
-  text-decoration: none;
+  height: 80px; 
+  width: 100%;
+  position: relative;
 }
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  width: 100%;
+  height: auto;
+}
+
+.nav-link {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.history-icon {
+  width: 100px;
+}
+
 
 
 
